--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Tenor+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
 
         <!-- fAVICON -->
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="git215-final/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="git215-final/favicon.ico" type="image/x-icon">
         <!-- STYLESHEET -->
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -39,12 +39,12 @@
                 <div>
                 <section>
                     <div id="amenities">
-                        <img src="swiss-chalet.jpg" alt="Mountains overlooking a beautiful chalet in the Swiss Alps" width="590" height="360">
+                        <img src="git215-final/swiss-chalet.jpg" alt="Mountains overlooking a beautiful chalet in the Swiss Alps" width="590" height="360">
                         <h3>Amenities and Options for Everyone</h3>
                         <p>Escape from everyday life and spend a few warm and relaxing days in with us. Enjoy the refreshing mountain air. Discover the village and the surrounding mountains on foot or with our bikes. Visit our spa or ski runs during a winter visit, or take a guided hike during the warmer months. We offer something for everyone!</p>
                     </div>
                     <div id="seasons">
-                        <img src="snowy-chalet.jpg" alt="Snowy mountains overlooking a beautiful chalet in the Swiss Alps during Winter" width="590" height="360">
+                        <img src="git215-final/snowy-chalet.jpg" alt="Snowy mountains overlooking a beautiful chalet in the Swiss Alps during Winter" width="590" height="360">
                         <h3>An Escape For Any Time of Year</h3>
                         <p>Whether you prefer a snowy mountain escape or a peaceful summer getaway surrounded by verdant mountains and valleys, we have it all. You can hit the slopes and build a snowman in the winter, and you can head out for a hike, picnics, and swimming in the spring and summer. Escape the ordinary with us!</p>
                     </div>
