--- a/contact.html
+++ b/contact.html
@@ -15,8 +15,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Tenor+Sans&family=Yeseva+One&display=swap" rel="stylesheet">
         <!-- fAVICON -->
-        <link rel="shortcut icon" href="images/images/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="images/images/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="git215-final/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="git215-final/favicon.ico" type="image/x-icon">
         <!-- STYLESHEET -->
         <link rel="stylesheet" href="styles.css">
     </head>
@@ -38,7 +38,7 @@
                 <div id="contact">
                     <h2>Contact Us</h2>
                     <p>Please reach out to us with any questions or concerns. We are happy to help you plan your dream vacation with us! Required fields marked with a <span class="required">*</span></p>
-                    <img src="images/images/swiss-peak.jpg" alt="A snowy peak in the Swiss Alps surrounded by green trees" width="350" height="455">
+                    <img src="git215-final/swiss-peak.jpg" alt="A snowy peak in the Swiss Alps surrounded by green trees" width="350" height="455">
                 </div>
 
                 <form action="https://wp.zybooks.com/form-viewer.php" method="POST" target="_blank">
